--- a/create_account.html
+++ b/create_account.html
@@ -27,7 +27,6 @@
 			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
 				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
 			</svg>
-
 			<h3 class="mb-3">Create Account</h3>
 			<form class="form-floating loginForm" onsubmit="return doCreateAccount()">
 				<div class="d-flex">
@@ -48,16 +47,14 @@
 					<input required type="password" class="form-control" id="pass" placeholder="Password">
 					<label for="pass">Password</label>
 				</div>
-				<div class="form-group mb-3">
-					<button action="landing_page.html" type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Create Account</button>
+				<div class="form-group mb-1">
+					<button type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Create Account</button>
 				</div>
-
 				<div class="form-group mb-3">
-					<span id="loginStatus"></span>
+					<input type="checkbox" class="form-check-input" id="remember-me">
+					<label class="form-check-label" for="remember-me" style="font-size: small">Remember me</label>
 				</div>
-
 			</form>
-
 			<a style="margin-bottom: 20px;" href="index.html">Back to login...</a>
 		</div>
 	</div>
