--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 				<div class="form-group mb-3">
 					<input required type="password" class="form-control" id="pass" placeholder="Password" style="border-radius: 0 0 7px 7px; font-size: 18px; position: relative">
 				</div>
-				<div class="form-group mb-3">
+				<div class="form-group mb-1">
 					<button type="submit" style="width: 75%; border-radius: 24px;" class="btn btn-primary btn-lg">Login</button>
 				</div>
 				<div class="form-group mb-3">
-					<span id="loginStatus"></span>
+					<input type="checkbox" class="form-check-input" id="remember-me">
+					<label class="form-check-label" for="remember-me" style="font-size: small">Remember me</label>
 				</div>
 			</form>
 			<a style="margin-bottom: 20px;" href="create_account.html">Create an Account...</a>
