--- a/landing_page.html
+++ b/landing_page.html
@@ -12,31 +12,299 @@
 	<script type="text/javascript" src="js/contact.js"></script>
 </head>
 
-<body class="d-flex align-items-center text-center" style="background-color: cornflowerblue; height: 100%;">
-<div id="background" class="backgroundBlurImg" style="filter: blur(8px);"></div>
-<div class="container loginContainer">
+<body style="height: 100%; background-color: #eff1f2;">
+
+<div class="container">
 	<div class="row">
-		<div class="col-12 loginHeader">
-			<h1 style="color: #0b5ed7">
-				Contactical
-			</h1>
-			<h5 class="text-muted">The Most Tactical way to store contacts.</h5>
-		</div>
+		<h1>Contactical</h1>
 	</div>
-	<div class="row" style="border-radius: 25px; overflow: hidden;">
-		<div class="loginCard" id="loginView">
-			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
-				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-			</svg>
-			<h3 class="mb-3">Welcome :)</h3>
-			<p class="mb-3">Seems you're a bit early to the party!<br/>In the meantime, check out our <a href="https://github.com/TylerMathis/COP4331G1P1">GitHub</a> for updates.</p>
-			<button style="width: 75%; border-radius: 24px;" class="btn btn-primary" onclick="cookieDebug()">Check Cookie</button>
-			<span id="cookieStatus" style="margin-top: 20px"></span>
-			<span id="cookieValid" style="margin-top: 20px"></span>
-			<a style="margin-bottom: 20px; margin-top: 20px;" href="javascript:doLogout()">Logout...</a>
+	<div class="row">
+		<div class="col-3 vh-100" style="overflow: auto; padding: 0">
+			<div class="list-group d-flex" style="border-radius: 25px; overflow: hidden; margin-right: 20px;">
+				<div class="list-group-item d-flex" style="min-height: 50px">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<div>
+						<h4 style="text-align: center; margin: auto;">Suneet Tipirnenisva wergvasvaerva</h4>
+					</div>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 50px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+				<div class="list-group-item d-flex" style="min-height: 100px;">
+					<div class="profile-icon d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+						</div>
+					</div>
+					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+				</div>
+
+			</div>
+
+<!--			<div class="contact-container" style="overflow: auto;">-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">DT</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">David Taylor</h3>-->
+<!--				</div>-->
+
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+<!--				<div class="contact-card d-flex">-->
+<!--					<div class="profile-icon d-flex flex-column justify-content-center align-self-center">-->
+<!--						<div class="align-self-center" style="width: 100%;">-->
+<!--							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">FL</h1>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<h3 style="text-align: center; margin: auto">First Last</h3>-->
+<!--				</div>-->
+
+
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--				<div class="contact-card"></div>-->
+<!--			</div>-->
+		</div>
+		<div class="col-9" style="background-color: white; border-radius: 25px;">
+			<h3>Edit Contact Area</h3>
 		</div>
 	</div>
 </div>
+
+
 
 </body>
 </html>
