--- a/landing_page.html
+++ b/landing_page.html
@@ -18,141 +18,62 @@
 	<div class="row">
 		<h1>Contactical</h1>
 	</div>
-	<div class="row">
-		<div class="col-3 vh-100" style="overflow: auto; padding: 0">
-			<div class="list-group d-flex" style="border-radius: 25px; overflow: hidden; margin-right: 20px;">
+	<div class="row" style="border-radius: 25px; overflow: hidden; -webkit-box-shadow: 0px 0px 50px 2px rgba(0,0,0,0.1);
+box-shadow: 0px 0px 50px 2px rgba(0,0,0,0.1);">
+		<div class="col-3 vh-100" style="overflow-y: auto; overflow-x: hidden; padding: 0; background-color: white; ">
+			<div class="list-group d-flex" style="max-width: 100%;">
+					<div class="list-group-item d-flex" style="min-height: 50px">
+						<div class="profile-icon d-flex justify-content-center align-self-center">
+							<div class="align-self-center" style="width: 100%;">
+								<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">ST</h3>
+							</div>
+						</div>
+						<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+							<h5 style="text-align: center; margin: 0; width: 100%;">Suneet Tipirneni</h5>
+						</div>
+					</div>
 				<div class="list-group-item d-flex" style="min-height: 50px">
 					<div class="profile-icon d-flex justify-content-center align-self-center">
 						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+							<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">ST</h3>
 						</div>
 					</div>
-					<div>
-						<h4 style="text-align: center; margin: auto;">Suneet Tipirnenisva wergvasvaerva</h4>
+					<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+						<h5 style="text-align: center; margin: 0; width: 100%;">Suneet Tipirneni</h5>
 					</div>
 				</div>
-				<div class="list-group-item d-flex" style="min-height: 50px;">
+				<div class="list-group-item d-flex" style="min-height: 50px">
 					<div class="profile-icon d-flex justify-content-center align-self-center">
 						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+							<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">ST</h3>
 						</div>
 					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+					<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+						<h5 style="text-align: center; margin: 0; width: 100%;">Suneet Tipirneni</h5>
+					</div>
 				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
+				<div class="list-group-item d-flex" style="min-height: 50px">
 					<div class="profile-icon d-flex justify-content-center align-self-center">
 						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+							<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">ST</h3>
 						</div>
 					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
+					<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+						<h5 style="text-align: center; margin: 0; width: 100%;">Suneet Tipirneni</h5>
+					</div>
 				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
+				<div class="list-group-item d-flex" style="min-height: 50px">
 					<div class="profile-icon d-flex justify-content-center align-self-center">
 						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
+							<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">ST</h3>
 						</div>
 					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
+					<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
+						<h5 style="text-align: center; margin: 0; width: 100%;">Suneet Tipirneni</h5>
 					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
-				</div>
-				<div class="list-group-item d-flex" style="min-height: 100px;">
-					<div class="profile-icon d-flex justify-content-center align-self-center">
-						<div class="align-self-center" style="width: 100%;">
-							<h1 style="text-align: center; font-weight: 300; font-size: 24px; margin-bottom: 0">ST</h1>
-						</div>
-					</div>
-					<h3 style="text-align: center; margin: auto">Suneet Tipirneni</h3>
 				</div>
 
-			</div>
+				</div>
 
 <!--			<div class="contact-container" style="overflow: auto;">-->
 <!--				<div class="contact-card d-flex">-->
@@ -298,7 +219,7 @@
 <!--				<div class="contact-card"></div>-->
 <!--			</div>-->
 		</div>
-		<div class="col-9" style="background-color: white; border-radius: 25px;">
+		<div class="col-9" style="background-color: white;">
 			<h3>Edit Contact Area</h3>
 		</div>
 	</div>
