--- a/landing_page.html
+++ b/landing_page.html
@@ -15,24 +15,44 @@
 
 <body class="d-flex align-items-center text-center" style="background-color: cornflowerblue; height: 100%;">
 <div id="background" class="backgroundBlurImg" style="filter: blur(8px);"></div>
-<div class="container loginContainer">
-	<div class="row">
-		<div class="col-12 loginHeader">
-			<h1 style="color: #0b5ed7">
+
+<div class="container backgroundContainer overflow-auto">
+	<div class="row gy-5">
+	  <div class="col-12">
+		<nav class="p-3 navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<div class="navbar-brand">
+				<img src="/favicon.ico" alt="Contactical Logo" width="25" height="25" class="d-inline-block align-top">
 				Contactical
-			</h1>
-			<h5 class="text-muted">The Most Tactical way to store contacts.</h5>
-		</div>
-	</div>
-	<div class="row" style="border-radius: 25px; overflow: hidden;">
-		<div class="loginCard" id="loginView">
-			<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
-				<path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-			</svg>
-			<h3 id="welcome" class="mb-3">Welcome</h3>
-			<p class="mb-3">Seems you're a bit early to the party!<br/>In the meantime, check out our <a href="https://github.com/TylerMathis/COP4331G1P1">GitHub</a> for updates.</p>
-			<a href="javascript:doLogout()">Logout...</a>
-		</div>
+				</div>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarText">
+				  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="#">Features</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="#">Pricing</a>
+					</li>
+				  </ul>
+				  <span class="navbar-text">
+					Navbar text with an inline element
+				  </span>
+				</div>
+			</div>
+		</nav>
+	  </div>
+	  <div class="col-4">
+		<div class="p-3 beveledBox">Contacts</div>
+	  </div>
+	  <div class="col-8">
+		<div class="p-3 beveledBox">Actions</div>
+	  </div>
 	</div>
 </div>
 
